# meltano

./: .all-contributorsrc  .bumpversion.cfg  .coveragerc  .dockerignore  .env.dev  .env.example  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .grype.yaml  .isort.cfg  .pre-commit-config.yaml  .tmuxinator.yml  .typos.toml  AGENTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Caddyfile  Dockerfile  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_FIX_SUMMARY.md  Pipfile  README.md  VERSION  alembic.ini  benchmark_state_backend.py  buffer.arrow  build.py  cli.py  codecov.yml  compare_versions.sh  comparison_results.txt  dbt_project.yml  (+35 more)
.github/: CODEOWNERS  (+5 more)
integration/example-library/meltano-env-precedence/env-var-in-pip-url-example-124/: example.py  pyproject.toml
src/cloud-cli/: LICENSE  README.md  pyproject.toml
src/cloud-cli/meltano/cloud/: CONTRIBUTING.md  README.md  __init__.py
src/cloud-cli/tests/: conftest.py
src/cloud-cli/tests/api/: test_cloud_client.py  test_cloud_config.py
src/cloud-cli/tests/cli/: conftest.py  test_base.py  test_cli.py  test_config.py  test_deployment.py  test_history.py  test_login.py  test_logs.py  test_project.py  test_run.py  test_schedules.py
src/meltano/: .gitignore  Pipfile  __init__.py  alembic.ini  cli.py  cloud  lazy_import.py  models.py  pyproject.toml
src/meltano/_vendor/: snowplow_tracker.pyi  vendor.txt
src/meltano/_vendor/snowplow_tracker/: LICENSE  __init__.py  _version.py  constants.py  contracts.py  emitter_configuration.py  emitters.py  event_store.py  payload.py  self_describing_json.py  snowplow.py  subject.py  tracker.py  tracker_configuration.py  typing.py
src/meltano/api/: README.md  __main__.py  api_blueprint.py  app.py  auth.py  config.py  events.py  external_connector.py  headers.py  init_db.py  json.py  mail.py  models.py  profiler.py  security.py  signals.py  url_converters.py  workers.py  wsgi.py
src/meltano/api/controllers/: aggregate.py  analysis_helper.py  analysishelper.py  dashboards.py  dashboards_helper.py  date.py  design_helper.py  embeds.py  embeds_helper.py  errors.py  explore_helper.py  join.py  joinhelper.py  m5o_file_parser.py  m5oc_collection_file.py  m5oc_file.py  ma_file_parser.py  mac_file.py  orchestrations.py  plugins.py  project_helper.py  projects.py  reports.py  reports_helper.py  repos.py  repos_helper.py  root.py  settings.py  settings_helper.py  settingshelper.py  sql.py  sql_helper.py  sqlhelper.py  start.py  substitution.py  timeframe.py  upload_helper.py  utils.py
src/meltano/api/events/: __init__.py  notification_events.py
src/meltano/api/executor/: __init__.py
src/meltano/api/meltano_sqlalchemy/: __init__.py  extension.py  model.py  pagination.py  query.py
src/meltano/api/models/: __init__.py  base.py  data.py  embed_token.py  oauth.py  projects.py  security.py  settings.py  subscription.py
src/meltano/api/security/: __init__.py  auth.py  forms.py  identity.py  oauth.py  readonly_killswitch.py  resource_filter.py
src/meltano/api/templates/: embedapp.html
src/meltano/api/workers/: __init__.py  airflow_worker.py  api_worker.py  dbt_worker.py  meltano_compiler_worker.py  ui_available_worker.py
src/meltano/api/wsgi/: __init__.py  config.py
src/meltano/cli/: __init__.py  __main__.py  _didyoumean.py  add.py  cli.py  cloud.py  commands.py  compile.py  config.py  connect.py  discovery.json  discovery.py  docs.py  dragon.py  elt.py  environment.py  extract.py  hub.py  initialize.py  install.py  invoke.py  job.py  list.py  lock.py  login.py  logs.py  main.py  model.py  params.py  permissions.py  remove.py  repl.py  run.py  schedule.py  schema.py  select.py  select_entities.py  state.py  ui.py  upgrade.py  (+6 more)
src/meltano/cli/interactive/: __init__.py  config.py  utils.py
src/meltano/cloud/api/: config.py  types.py
src/meltano/cloud/cli/: __init__.py  __main__.py  base.py  config.py  deployment.py  job.py  login.py  logs.py  project.py  run.py  schedule.py  state.py
src/meltano/common/: manifest.py  manifest_reader.py  manifest_writer.py  service.py
src/meltano/core/: __init__.py  _compat.py  _packaging.py  _state.py  _types.py  cli_messages.py  config_service.py  connection_service.py  constants.py  database_add_service.py  db.py  dbt_service.py  discovery.json  discovery.yml  discovery_file.py  elt_context.py  enums.py  environment.py  environment_service.py  environment_variables_service.py  error.py  extract_utils.py  initialize.yml  job_state.py  locked_definition_service.py  lockfile_service.py  login_service.py  m5oc_file.py  mac_file.py  meltano_file.py  meltano_invoker.py  migration_service.py  models.py  multiple_config.py  multiple_meltano_file.py  plugin.py  plugin_discovery_generator.py  plugin_discovery_service.py  plugin_install_service.py  plugin_invoker.py  (+35 more)
src/meltano/core/_packaging/: __init__.py  _metadata.py  _uv.py
src/meltano/core/_protocols/: el_context.py
src/meltano/core/behavior/: __init__.py  _dataclass.py  addon.py  canonical.py  hookable.py  name_eq.py  pluggable.py  versioned.py  visitor.py
src/meltano/core/block/: __init__.py  block_parser.py  blockset.py  error.py  extract_load.py  future_utils.py  ioblock.py  parser.py  plugin_command.py  singer.py  utils.py
src/meltano/integration/: logging.yaml  validate.sh
src/meltano/load/: test.py
src/meltano/meltano/: __init__.py
src/meltano/migrations/: __init__.py  dialect_typing.py  env.py
src/meltano/oauth/: app.py  config.py  providers.py
src/meltano/schemas/: __init__.py  discovery.schema.json  meltano.schema.json
src/meltano/scripts/: alembic_freeze.py  build.py
src/meltano/support/: config_service.py  database_add_service.py  db.py  discovery.json  extract_utils.py  extractor.py  initialize.yml  job.py  plugin_discovery_service.py  plugin_install_service.py  project_add_service.py  project_init_service.py  utils.py  warehouse_add_service.py
src/meltano/tests/: conftest.py
src/meltano/transformations/: data_cleaner.py
src/meltano/webapp/: jest.config.js  jsconfig.json  package.json  vue.config.js
(+2844 files in other folders)
