[build-system]
requires = ["poetry_core==1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "meltano.cloud.cli"
version = "2.15.1"
description = "Meltano Cloud CLI"
license = "MIT"
authors = ["Meltano <hello@meltano.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
packages = [
    { include = "meltano" }
]

[tool.poetry.urls]
"Changelog" = "https://github.com/meltano/meltano/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/meltano/meltano/issues"
"Slack" = "https://meltano.com/slack"
"Twitter" = "https://twitter.com/meltanodata/"
"Youtube" = "https://www.youtube.com/meltano"

[tool.poetry.dependencies]
aiohttp = "^3.8.4"
cached-property = "^1"
click = "^8.1"
importlib-metadata = {version = "^6.0.0", python = "<3.8"}
pydantic = "^1.10.5"
python = ">=3.7,<3.12"
requests = "^2.28.0"
structlog = "^22.3.0"

[tool.poetry.scripts]
meltano-cloud = "meltano.cloud.cli:main"
